keto/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keto
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keto
  template:
    metadata:
      labels:
        app: keto
    spec:
      containers:
        - name: keto
          image: oryd/keto:v0.11.0
          args:
            - serve
          ports:
            - containerPort: 4466
            - containerPort: 4467
