keto/keto-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keto
  namespace: ory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keto
  template:
    metadata:
      labels:
        app: keto
    spec:
      containers:
        - name: keto
          image: oryd/keto:v0.11.0
          args:
            - serve
            - --config
            - /etc/keto/keto.yml
          ports:
            - containerPort: 4455
              name: public
            - containerPort: 4456
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/keto/keto.yml
              subPath: keto.yml
      volumes:
        - name: config
          configMap:
            name: keto-config
